test/sh/error/func_assign_bad_type.sk
func() int {
	return 1
}

x: float = func()